# InterprocessBoostCPPTemplate

./: .gitignore  CMakeLists.txt  README.md  build_executable.bat  build_executable.sh
all/: CMakeLists.txt
first_interprocess_exe/: CMakeLists.txt
first_interprocess_exe/source/: main.cpp
lib_sources/: CMakeLists.txt
second_interprocess_exe/: CMakeLists.txt
second_interprocess_exe/source/: main.cpp
